mobile base template

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Palanquin&family=Staatliches&display=swap" rel="stylesheet">
-   
+
     <link rel="stylesheet" href="style.css">
-    
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -16,7 +16,52 @@
 </head>
 
 <body>
+    <header>
+        <img 
+            src="img/logo.svg" 
+            alt="Logomarca ilustrando a lua e ao centro um sorvete rosa de casquinha"
+            width="auto" height="137">
+        <div id="brand-bg">
+            <h1>Space Cream</h1>
+        </div>
 
+    </header>
+
+    <main>
+        <div id="paragraph-style">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a rhoncus leo. Donec at scelerisque magna.
+                Nullam vitae neque sit amet erat dignissim cursus ac ac lectus. Aliquam erat volutpat. Praesent at quam
+                aliquet,
+            </p>
+        </div>
+        
+
+        <div class="img-wrapper">
+            <p>Paletas</p>
+            <img src="img/sorvete1.png" alt="Três paletas mexicanas de amora empilhadas">
+        </div>
+
+        <div class="img-wrapper">
+            <p>Shakes</p>
+            <img src="img/sorvete2.png" alt="Milkshack de frutas vermelhas">
+        </div>
+
+        <div class="img-wrapper">
+            <p>Massas</p>
+            <img src="img/sorvete3.png" alt="Colher com bola de massa de sorvete na cor rosa">
+        </div>
+
+        <div class="img-wrapper">
+            <p>Picolé</p>
+            <img src="img/sorvete4.png" alt="Uma mão segurando um picolé de dois sabores">
+
+        </div>
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 
 </html>
